Sun Mar 27 12:34:23 EDT 2011	JK Lowden <jklowden@freetds.org>
	* include/sybdb.h include/tds.h
	- src/dblib/dblib.c src/tds/config.c src/tds/login.c
	- Support DBSETLDBNAME

Tue Mar 22 13:51:32 EDT 2011	JK Lowden <jklowden@freetds.org>
	* autogen.sh neater output
	* src/apps/tsql.c spell Kerberos correctly
	* src/dblib/bcp.c initialize bcp_terminator

Mon Mar 21 20:21:51 EDT 2011	JK Lowden <jklowden@freetds.org>
	* doc/userguide.sgml updated for upcoming release

Sun Mar 13 14:40:55 EDT 2011	JK Lowden <jklowden@freetds.org>
	* doc/bsqldb.txt doc/freebcp.txt doc/tsql.txt
	- doc/userguide.sgml
	- updated for upcoming release
	* src/apps/bsqldb.c support numeric/decimal
	* src/apps/freebcp.c allow no username for trusted logins

Sat Mar 12 07:52:15 EST 2011	JK Lowden <jklowden@freetds.org>
	* doc/userguide.sgml fine tune linker appendix
	
Thu Feb 17 16:40:58 EST 2011	JK Lowden <jklowden@freetds.org>
	* Nmakefile more help for building under Windows

Thu Feb 17 10:51:40 EST 2011	JK Lowden <jklowden@freetds.org>
	* Nmakefile default to Win32-Debug
	* src/apps/bsqldb.c use sybfront.h, not sqlfront.h
	* include/sybdb.h include/tds.h src/dblib/dblib.c
	- src/tds/login.c
	- indicate if TDS version automatically downgraded

Sat Feb 12 20:53:19 EST 2011	JK Lowden <jklowden@freetds.org>
	* doc/userguide.sgml	Add linker appendix

Fri Feb 11 14:54:17 CET 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/replacements/iconv.c:
	- improve iconv replacement unsigned/signed declaration

Tue Jan 25 00:52:04 EST 2011	JK Lowden <jklowden@freetds.org>
	* doc/userguide.sgml include/sybdb.h
	- remove use and reference to sqlfront.h.  

Sat Jan 22 15:04:21 EST 2011	JK Lowden <jklowden@freetds.org>
	* src/tds/iconv.c tds_canonical_charset_name cannot return NULL

Mon Jan 17 23:27:25 CET 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/data.c src/tds/token.c:
	- unify metadata read from server
